--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,10 +1,10 @@
 FROM node:16.13.1 as build-stage
 
-CMD mkdir /srv/app
+CMD mkdir /srv/cf.archivospublicos
 
-COPY ["package.json","bower.json",".bowerrc","/srv/app/"]
+COPY ["package.json","bower.json",".bowerrc","/srv/cf.archivospublicos/"]
 
-WORKDIR /srv/app
+WORKDIR /srv/cf.archivospublicos
 
 RUN npm install
 
@@ -12,7 +12,7 @@ RUN npm install bower -g
 
 RUN bower install --allow-root
 
-COPY [".", "/srv/app/"]
+COPY [".", "/srv/cf.archivospublicos/"]
 
 EXPOSE 80
 
