--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.9"
 
 x-common-variables: &common-variables
-  HOST_ARCHIVOSPUBLICOS: "http://192.168.42.3:2201"
-  HOST_ACCOUNT: "http://192.168.42.3:2202"
+  HOST_ARCHIVOSPUBLICOS: "http://192.168.42.4:2201"
+  HOST_ACCOUNT: "http://192.168.42.4:2202"
   SESSION_SECRET: "trascender-con-sso"
   COOKIE_DOMAINs: ".jotace.cl"
   MONGO_URL: "mongodb://host.docker.internal:27017"
@@ -13,19 +13,36 @@ services:
 
   archivospublicos:
     build:
-      context: ../cf.archivospublicos
+      context: .
       dockerfile: Dockerfile.dev
     image: archivospublicos:0.0.1
     container_name: archivospublicos
     volumes:
-      - ../cf.archivospublicos:/srv/cf.archivospublicos/
+      - .:/srv/cf.archivospublicos/
       - /srv/cf.archivospublicos/node_modules
       - /srv/cf.archivospublicos/frontend/bower_components
     environment:
        <<: *common-variables
-       HOST: "http://192.168.42.3:2201"
+       HOST: "http://192.168.42.4:2201"
     ports:
       - "2201:80"
+      
+  account:
+    build:
+      context: ../cf.account
+      dockerfile: Dockerfile.dev
+    image: account:0.0.1
+    container_name: account
+    depends_on:
+      - archivospublicos
+    volumes:
+      - ../cf.account:/srv/cf.account/
+      - /srv/cf.account/node_modules
+    environment:
+       <<: *common-variables
+       HOST: "http://192.168.42.4:2202"
+    ports:
+      - "2202:80"
       
 #networks:
 #  default:
