--- a/package.json
+++ b/package.json
@@ -8,22 +8,8 @@
 		"dev": "npx nodemon --legacy-watch app  --ignore frontend"
 	},
 	"dependencies": {
-		"body-parser": "^1.18.3",
-		"compression": "^1.7.4",
-		"cookie-parser": "1.4.3",
-		"cors": "2.8.5",
-		"helmet": "^3.21.2",
-		"express": "^4.16.3",
-		"express-session": "1.15.6",
-		"express-recaptcha": "2.1.0",
-		"express-fileupload": "1.2.1",
-		"mongodb": "^3.5.5",
-		"jwt-simple": "^0.5.6",
-		"nodemailer": "6.7.0",
-		"nodemailer-smtp-transport": "^2.4.2",
-		"googleapis": "^75.0.0",
-		"web-push": "3.4.4",
-		"socket.io": "^2.1.6"
+		"cl.jotacalderon.cf.framework": "latest",
+		"express-fileupload": "1.2.1"
 	},
 	"devDependencies": {		
 		"nodemon": "latest"
