--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,26 @@ x-common-variables: &common-variables
   SESSION_SECRET: "trascender-con-sso"
   COOKIE_DOMAINs: ".jotace.cl"
   MONGO_URL: "mongodb://host.docker.internal:27017"
-  MONGO_DBNAME: "miprimeradb"
-  SOCKET: ""
+  MONGO_DBNAME: "miscolecciones"
+  SESION_STORAGE_HOST: redis
+  SESION_STORAGE_PORT: 6379
 
 services:
 
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+         
   archivospublicos:
     build:
       context: .
       dockerfile: Dockerfile.dev
     image: archivospublicos:0.0.1
     container_name: archivospublicos
+    depends_on:
+      - redis
     volumes:
       - .:/srv/cf.archivospublicos/
       - /srv/cf.archivospublicos/node_modules
