--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
 		"jquery": "3.2.1",
 		"ckeditor": "4.5.11",
 		"jquery-ui": "1.12.1",
-		"gojs": "2.1.38"
+		"gojs": "2.1.38",
+		"codemirror": "5.24.2"
 	}
 }
