avance con nueva version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,5 @@
 version: "3.9"
 
-x-common-variables: &common-variables
-  HOST_ARCHIVOSPUBLICOS: "http://192.168.42.5:2201"
-  SESSION_SECRET: "trascender-con-sso"
-  COOKIE_DOMAINs: ".jotace.cl"
-
 services:
 
   archivospublicos:
@@ -18,8 +13,7 @@ services:
       - /srv/cf.archivospublicos/node_modules
       - /srv/cf.archivospublicos/frontend/bower_components
     environment:
-       <<: *common-variables
-       HOST: "http://192.168.42.5:2201"
+       NODE_ENV: "development"
     ports:
       - "2201:80"
       
