--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,6 @@
-HOST: "http://192.168.100.6:2201"
-HOST_ARCHIVOSPUBLICOS: "http://192.168.100.6:2201"
+PORT: 2201
+HOST: "http://localhost:2201"
+HOST_ARCHIVOSPUBLICOS: "http://localhost:2201"
 SESSION_SECRET: "trascender-con-sso"
 COOKIE_DOMAINs: ".jotace.cl"
 FRONTEND_BK: "frontend/vue/dist"
