--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,6 @@ services:
       - /srv/cf.archivospublicos/frontend/bower_components
     environment:
        NODE_ENV: "development"
+       PORT: ${PORT:-2201}
     ports:
-      - "2201:80"
-      
-#networks:
-#  default:
-#    external:
-#      name: jotace
+      - "${PORT:-2201}:2201"
