--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,7 +5,7 @@ services:
   archivospublicos:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     image: archivospublicos:0.0.1
     container_name: archivospublicos
     volumes:
@@ -13,7 +13,7 @@ services:
       - /srv/cf.archivospublicos/node_modules
       - /srv/cf.archivospublicos/frontend/bower_components
     environment:
-       NODE_ENV: "production"
+       NODE_ENV: "development"
        PORT: ${PORT:-2201}
     ports:
       - "${PORT:-2201}:2201"
