--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
 PORT: 2201
-HOST: "http://localhost:2201"
-HOST_ARCHIVOSPUBLICOS: "http://localhost:2201"
+HOST: "http://192.168.42.5:2201"
+
+HOST_ARCHIVOSPUBLICOS: "http://192.168.42.5:2201"
 SESSION_SECRET: "trascender-con-sso"
