--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
 		"ckeditor": "4.5.11",
 		"jquery-ui": "1.12.1",
 		"gojs": "2.1.38",
-		"codemirror": "5.24.2"
+		"codemirror": "5.24.2",
+		"axios": "1.6.6"
 	}
 }
