--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,2 @@
 PORT: 2201
-HOST: "http://192.168.1.9:2201"
-
-HOST_ARCHIVOSPUBLICOS: "http://192.168.1.9:2201"
-SESSION_SECRET: "trascender-con-sso"
+HOST: "http://localhost:2201"
