--- a/package.json
+++ b/package.json
@@ -8,7 +8,16 @@
 		"dev": "npx nodemon --legacy-watch app  --ignore frontend"
 	},
 	"dependencies": {
-		"cl.jotacalderon.cf.framework": "0.0.28"
+		"cl.jotacalderon.cf.framework": "0.0.28",
+		"angular": "1.8.2",
+		"bootstrap": "3.3.7",
+		"font-awesome": "4.7.0",
+		"jquery": "3.2.1",
+		"ckeditor": "4.5.11",
+		"jquery-ui": "1.12.1",
+		"gojs": "2.1.38",
+		"codemirror": "5.24.2",
+		"axios": "1.6.6"
 	},
 	"devDependencies": {		
 		"nodemon": "latest"
