--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 node_modules/*
-frontend/assets/lib/bower_components/*
 package-lock.json
+frontend/assets/lib/package-lock.json
+frontend/assets/lib/node_modules/*
