--- a/frontend/assets/lib/package.json
+++ b/frontend/assets/lib/package.json
@@ -5,13 +5,13 @@
 	"private": true,
 	"dependencies": {
 		"angular": "1.8.2",
+		"axios": "1.6.6",
 		"bootstrap": "3.3.7",
-		"font-awesome": "4.7.0",
-		"jquery": "3.2.1",
 		"ckeditor": "4.5.11",
-		"jquery-ui": "1.12.1",
-		"gojs": "2.1.38",
 		"codemirror": "5.24.2",
-		"axios": "1.6.6"
+		"font-awesome": "4.7.0",
+		"gojs": "2.1.38",
+		"jquery": "3.2.1",
+		"jquery-ui": "1.12.1"
 	}
 }
